tests/error/testcaseErroVarNDeclaradaSimple.g
programa {
    x = 10; // ERRO: 'x' não foi declarado
}